--- a/Web/JavaScript/ES6-11.md
+++ b/Web/JavaScript/ES6-11.md
@@ -158,3 +158,20 @@ console.log(arr.concat(arr2)) //输出[1,2,3,4,5,6]
 arr2[Symbol.isConcatSpreadable] = false
 console.log(arr.concat(arr2)) //输出[1,2,3,[4,5,6]]
 ```
+
+## 迭代器
+1. 迭代器（Iterator）是一种接口，任何数据结构只要部署Iterator接口就可以完成遍历操作
+2. for of 循环，Iterator接口主要供for of消费
+3. 原生具备Iterator接口的数据结构：Array、Arguments、Set、Map、String、TypedArray、NodeList
+### for of使用
+```JavaScript
+const arr = ['一号','三号','二号']
+for(let v of arr){
+    console.log(v) //输出'一号' '三号' '二号'
+}
+```
+### 工作原理
+1. 创建一个指针对象，指向当前数据结构的起始位置；
+2. 第一次调用对象的 next 方法，指针自动指向数据结构的第一个成员；
+3. 接下来不断调用 next 方法，指针一直往后移动，直到指向最后一个成员；
+4. 每调用 next 方法返回一个包含 value 和 done 属性的对象；
